# system-performance-analyzer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.json  main.cpp  main_1.cpp
.github/workflows/: github-actions.yml
example_configs/: case_study_test.json  json_case_study.json  json_example.json  laptop_config.json  xavier_config.json
example_configs/sensor_configs/: linux_config.json  minimal_linux.json  xavier_config.json
example_configs/test_configs/: linux_cpu_test.json  minimal.json  xavier_decoding.json  xavier_encoding.json
modules/filestream/: filestream.cpp  filestream.h
modules/gstreamer/: main.cpp
modules/videostream/: CMakeLists.txt  main.cpp
modules/videostream/helpers/: generic.h
modules/videostream/read_file/: main.cpp
src/: globals.h  input_handler.cpp  input_handler.h  processes_struct.h  spa.cpp  spa.h
src/Benchmarking/: CMakeLists.txt  Monitoring.h
src/Benchmarking/Linux/: Helpers.cpp  Monitoring.h
src/Benchmarking/cmake/: FindLinuxBenchmark.cmake
src/benchmarks/: config_handler.h  gstreamer_identifier.h  gstreamer_measurements.cpp  gstreamer_measurements.h  measurements_base.h  pipeline_measurements.cpp  pipeline_measurements.h  process_measurements.cpp  process_measurements.h  sensor_measurements.cpp  sensor_measurements.h  system_measurements.cpp  system_measurements.h
src/benchmarks/Linux/: Helpers.h  Monitoring.cpp  Monitoring.h  perf_measurements.cpp  perf_measurements.h  performance_helpers.cpp  performance_helpers.h  proc_handler.cpp  proc_handler.h  struct_sensors.h  summarize_data.h  xavier_sensors.cpp  xavier_sensors.h  xavier_sensors_live.h
src/benchmarks/analysis/: correlation.cpp  correlation.h
src/benchmarks/linux/: Helpers.cpp  Helpers.h  measurement_item_handler.h  perf_measurements.cpp  perf_measurements.h  performance_helpers.cpp  performance_helpers.h  proc_handler.cpp  proc_handler.h  struct_measurements.h  struct_sensors.cpp  struct_sensors.h  summarize_data.h  xavier_sensors.cpp  xavier_sensors.h
src/core_communicator/: core_communicator.h
src/exports/: export.h  export_struct.h  export_types.h  exports_base.h  file_writer.cpp  file_writer.h  summary_writer.cpp  summary_writer.h  translations.h
src/exports/export_types/: export_csv.cpp  export_csv.h  export_graphs.cpp  export_graphs.h  export_json.cpp  export_json.h  summary_generator.cpp  summary_generator.h  terminal_ui.cpp  terminal_ui.h
src/gstreamer/: handler.cpp  handler.h  measurement_types.h  trace_parser.cpp  trace_parser.h
src/helpers/: atomic_queue.h  helper_functions.cpp  helper_functions.h  json_helpers.cpp  json_helpers.h  logger.h  stopwatch.h  synchronizer.cpp  synchronizer.h  timer.h
src/json_config/: config.h  config_parser.cpp  config_parser.h
src/json_config/sensor_config/: config.h  config_parser.cpp  config_parser.h
src/linux/: data_handler.cpp  data_handler.h  filesystem.cpp  filesystem.h  path_parser_base.h  pipe_comm.cpp  pipe_comm.h  run_process.cpp  run_process.h  shared_memory.cpp  shared_memory.h
src/linux/datahandlers/: direct_handler.cpp  direct_handler.h  helpers.h  pidstat_handler.h  pidstatm_handler.h  procmeminfo_handler.h  procstat_handler.h
src/linux/filesystem/: statm.cpp  statm.h
src/modules/: base_class.cpp  base_class.h  config.h  unit_handler.h
src/process_runner/: run_process_base.cpp  run_process_base.h
src/stdout_export/: summary_generator.cpp  summary_generator.h  summary_writer.h
tests/: CMakeLists.txt  test_correlation.cpp  test_helpers.cpp  test_summarize_data.cpp  test_synchronizer.cpp
